Capabilities: entity iota holders, staffcast + patterns attachments, pigment/shears wiring
- findDataHolder(Entity) now dispatches ItemEntity/ItemFrame/EntityWallScroll
  to the Common ItemDelegatingEntityIotaHolder.To* wrappers — that code was
  already cross-platform, only the NeoForge platform bridge was missing.
- Staffcast image + patterns-in-UI gain AttachmentType entries
  (STAFFCAST_IMAGE stores the raw CompoundTag via CompoundTag.CODEC; PATTERNS
  stores a List<ResolvedPattern> with a Codec derived from ResolvedPattern's
  existing serializeToNBT/fromNBT round-trip).
- setStaffcastImage/getStaffcastVM/setPatterns/getPatternsSavedInUi/
  clearCastingData now route through the attachments and rebuild the VM on
  read the same way CCStaffcastImage does on Fabric.
- isPigment/getColorProvider: instance-dispatch on PigmentItem so pigment
  rendering picks up the colour the item defines instead of always returning
  ColorProvider.MISSING.
- isShearsCondition: return the built-in
  CanItemPerformAbility.canItemPerformAbility(ItemAbilities.SHEARS_DIG)
  (the 1.21 rename of CanToolPerformAction/ToolActions).

Still stubbed: fluid IO (tryPlaceFluid / drainAllFluid), event veto
(isBreakingAllowed/isPlacingAllowed both return true), findMediaHolder(ServerPlayer).

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>